# 7405M_TowerTakeover_Code

./: .gitignore  CMakeLists.txt  common.mk  compile_commands.json  project.pros
src/: initialize.cpp  opcontrol.cpp
src/lib/: meecan_lib.hpp
src/lib/geometry/: Displacement1d.cpp  Displacement1d.hpp  Pose2d.cpp  Pose2d.hpp  Pose2dWithCurvature.cpp  Pose2dWithCurvature.hpp  Rotation2d.cpp  Rotation2d.hpp  Translation2d.cpp  Translation2d.hpp  Twist2d.cpp  Twist2d.hpp
src/lib/geometry/interfaces/: ICurvature.hpp  IPose2d.hpp  IRotation2d.hpp  ITranslation2d.hpp  State.hpp
src/lib/physics/: DCMotor.cpp  DCMotor.hpp  DCMotorTransmission.cpp  DCMotorTransmission.hpp  DifferentialDrive.cpp  DifferentialDrive.hpp  DriveCharacterization.cpp  DriveCharacterization.hpp
src/lib/spline/: CubicHermiteSpline.cpp  CubicHermiteSpline.hpp  QuinticHermiteSpline.cpp  QuinticHermiteSpline.hpp  Spline.cpp  Spline.hpp  SplineGenerator.cpp  SplineGenerator.hpp
src/lib/trajectory/: DistanceView.cpp  DistanceView.hpp  IPathFollower.hpp  IndexView.cpp  IndexView.hpp  PurePursuitController.cpp  PurePursuitController.hpp  TimedView.cpp  TimedView.hpp  Trajectory.cpp  Trajectory.hpp  TrajectoryIterator.cpp  TrajectoryIterator.hpp  TrajectoryPoint.cpp  TrajectoryPoint.hpp  TrajectorySamplePoint.cpp  TrajectorySamplePoint.hpp  TrajectoryUtil.cpp  TrajectoryUtil.hpp  TrajectoryView.cpp  TrajectoryView.hpp
src/lib/trajectory/timing/: CentripetalAccelerationConstraint.cpp  CentripetalAccelerationConstraint.hpp  DifferentialDriveDynamicsConstraint.cpp  DifferentialDriveDynamicsConstraint.hpp  TimedState.cpp  TimedState.hpp  TimingConstraint.cpp  TimingConstraint.hpp  TimingUtil.cpp  TimingUtil.hpp  VelocityLimitRegionConstraint.cpp  VelocityLimitRegionConstraint.hpp
src/lib/utility/: CircularBuffer.cpp  CircularBuffer.hpp  DelayedBoolean.cpp  DelayedBoolean.hpp  DriveSignal.cpp  DriveSignal.hpp  InterpolatingDouble.cpp  InterpolatingDouble.hpp  InterpolatingLong.cpp  InterpolatingLong.hpp  InterpolatingMap.cpp  InterpolatingMap.hpp  InterpolatingTreeMap.cpp  InterpolatingTreeMap.hpp  LatchedBoolean.cpp  LatchedBoolean.hpp  MovingAverage.cpp  MovingAverage.hpp  PolynomialRegression.cpp  PolynomialRegression.hpp  Singleton.cpp  Singleton.hpp  Units.hpp  Utility.hpp
src/lib/utility/interfaces/: CSVLoggable.hpp  Interpolable.hpp  InverseInterpolable.hpp
src/robot/: Constants.cpp  Constants.hpp  Robot.cpp  Robot.hpp  RobotAux.cpp  RobotState.cpp  RobotState.hpp
src/robot/auto/: AutoModeRunner.cpp  AutoModeRunner.hpp  AutonConstants.hpp
src/robot/auto/actions/: Action.hpp  DriveInertialTurnAction.cpp  DriveInertialTurnAction.hpp  DriveMoveWheelAction.cpp  DriveMoveWheelAction.hpp  DriveTrajectory.cpp  DriveTrajectory.hpp  DriveTurnAction.cpp  DriveTurnAction.hpp  DriveTurnWheelAction.cpp  DriveTurnWheelAction.hpp  LiftPosition.cpp  LiftPosition.hpp  OpenLoopDriveAction.cpp  OpenLoopDriveAction.hpp  OpenLoopIntakeAction.cpp  OpenLoopIntakeAction.hpp  OpenLoopLiftAction.cpp  OpenLoopLiftAction.hpp  OpenLoopTrayAction.cpp  OpenLoopTrayAction.hpp  ParallelAction.cpp  ParallelAction.hpp  ResetLiftTrayPosition.cpp  ResetLiftTrayPosition.hpp  SeriesAction.cpp  SeriesAction.hpp  TrayEnableStackAction.cpp  TrayEnableStackAction.hpp  TrayPosition.cpp  TrayPosition.hpp  WaitAction.cpp  WaitAction.hpp  WaitForCubeInIntakeAction.cpp  WaitForCubeInIntakeAction.hpp  WaitForVisionCrossAction.cpp  WaitForVisionCrossAction.hpp
src/robot/auto/modes/: AutoModeBase.cpp  AutoModeBase.hpp  AutoStacking.cpp  AutoStacking.hpp  BackAutoMode.cpp  BackAutoMode.hpp  DoNothingMode.hpp  FlipOutMode.cpp  FlipOutMode.hpp  FrontAutoMode.cpp  FrontAutoMode.hpp  ProgrammingSkillsMode.cpp  ProgrammingSkillsMode.hpp  TestMode.cpp  TestMode.hpp  TestTrajectoryMode.cpp  TestTrajectoryMode.hpp
src/robot/loops/: Loop.hpp  LoopConstants.hpp  Looper.cpp  Looper.hpp
src/robot/paths/: DriveMotionPlanner.cpp  DriveMotionPlanner.hpp  PathConstants.hpp  PathFollower.cpp  PathFollower.hpp  TrajectoryGenerator.cpp  TrajectoryGenerator.hpp  TrajectorySet.cpp  TrajectorySet.hpp
src/robot/subsystems/: Drive.cpp  Drive.hpp  Inertial.cpp  Inertial.hpp  Intake.cpp  Intake.hpp  Lift.cpp  Lift.hpp  Odometry.cpp  Odometry.hpp  Subsystem.hpp  Tray.cpp  Tray.hpp  VisionSystem.cpp  VisionSystem.hpp
src/tests/: testAll.cpp  testBase.cpp  testBase.hpp  testGeometry.cpp  testGeometry.hpp  testPhysics.cpp  testPhysics.hpp  testSpline.cpp  testSpline.hpp  testsInclude.hpp
src/tests/lib/geometry/: testGeometry.cpp  testGeometry.hpp
src/tests/lib/physics/: testPhysics.cpp  testPhysics.hpp
src/tests/lib/spline/: testSpline.cpp  testSpline.hpp
src/tests/lib/trajectory/: testTrajectory.cpp  testTrajectory.hpp  testTrajectoryIterator.cpp  testTrajectoryIterator.hpp
src/tests/lib/trajectory/timing/: testTimedState.cpp  testTimedState.hpp
src/wlib/geometry/: Displacement1d.cpp  Displacement1d.hpp  Pose2d.hpp  Pose2dWithCurvature.hpp  Rotation2d.cpp  Rotation2d.hpp  Translation2d.cpp  Translation2d.hpp  Twist2d.cpp  Twist2d.hpp
src/wlib/geometry/interfaces/: ICurvature.hpp  IPose2d.hpp  IRotation2d.hpp  ITranslation2d.hpp  State.hpp
src/wlib/utility/: CircularBuffer.cpp  CircularBuffer.hpp  DelayedBoolean.cpp  DelayedBoolean.hpp  DriveSignal.cpp  DriveSignal.hpp  InterpolatingDouble.cpp  InterpolatingDouble.hpp  InterpolatingLong.cpp  InterpolatingLong.hpp  LatchedBoolean.cpp  LatchedBoolean.hpp  MovingAverage.cpp  MovingAverage.hpp
src/wlib/utility/interfaces/: CSVLoggable.hpp  Interpolable.hpp  InverseInterpolable.hpp
